fx added PatientProfile services

--- a/DigitalTherapyBackendApp.Api/appsettings.Development.json
+++ b/DigitalTherapyBackendApp.Api/appsettings.Development.json
@@ -16,5 +16,13 @@
   },
   "Redis": {
     "ConnectionString": "localhost:6379"
+  },
+  "Email": {
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "SmtpUsername": "your-email@gmail.com",
+    "SmtpPassword": "your-app-password",
+    "SenderEmail": "noreply@yourapp.com",
+    "SenderName": "Digital Therapy Assistant"
   }
 }
