--- a/DigitalTherapyBackendApp.Domain/DigitalTherapyBackendApp.Domain.csproj
+++ b/DigitalTherapyBackendApp.Domain/DigitalTherapyBackendApp.Domain.csproj
@@ -19,9 +19,14 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.3" />
     <PackageReference Include="MimeKit" Version="4.11.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.3" />
     <PackageReference Include="StackExchange.Redis" Version="2.8.31" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.6.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DigitalTherapyBackendApp.Application\DigitalTherapyBackendApp.Application.csproj" />
   </ItemGroup>
 
 </Project>
