--- a/DigitalTherapyBackendApp.Infrastructure/DigitalTherapyBackendApp.Infrastructure.csproj
+++ b/DigitalTherapyBackendApp.Infrastructure/DigitalTherapyBackendApp.Infrastructure.csproj
@@ -22,6 +22,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="MimeKit" Version="4.11.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.3" />
     <PackageReference Include="StackExchange.Redis" Version="2.8.31" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.6.1" />
