--- a/DigitalTherapyBackendApp.Domain/DigitalTherapyBackendApp.Domain.csproj
+++ b/DigitalTherapyBackendApp.Domain/DigitalTherapyBackendApp.Domain.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Google_GenerativeAI" Version="2.4.6" />
     <PackageReference Include="MailKit" Version="4.11.0" />
     <PackageReference Include="MediatR" Version="11.0.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
