fx added therapy chat v1

--- a/DigitalTherapyBackendApp.Api/appsettings.Development.json
+++ b/DigitalTherapyBackendApp.Api/appsettings.Development.json
@@ -27,5 +27,12 @@
     "SmtpPassword": "your-app-password",
     "SenderEmail": "noreply@yourapp.com",
     "SenderName": "Digital Therapy Assistant"
+  },
+  "Google": {
+    "GeminiApiKey": "AIzaSyBd9LZ3Kl2vZqWz-N7h0OdtzTDpuZyTDes",
+    "GeminiModel": "gemini-1.5-pro"
+  },
+  "AI": {
+    "SystemUserId": "0195e8fa-e620-7999-a9c2-741c13adfffd"
   }
 }
