fx added therapy chat v2

--- a/DigitalTherapyBackendApp.Api/appsettings.Development.json
+++ b/DigitalTherapyBackendApp.Api/appsettings.Development.json
@@ -28,9 +28,12 @@
     "SenderEmail": "noreply@yourapp.com",
     "SenderName": "Digital Therapy Assistant"
   },
-  "Google": {
-    "GeminiApiKey": "AIzaSyBd9LZ3Kl2vZqWz-N7h0OdtzTDpuZyTDes",
-    "GeminiModel": "gemini-1.5-pro"
+  "OpenAI": {
+    "ApiKey": "your-api-key-here",
+    "ModelName": "gpt-3.5-turbo",
+    "MessageHistoryCount": 10,
+    "MaxRetries": 3,
+    "TimeoutSeconds": 30
   },
   "AI": {
     "SystemUserId": "0195e8fa-e620-7999-a9c2-741c13adfffd"
