fx add Daily Tips Services

--- a/DigitalTherapyBackendApp.Api/DigitalTherapyBackendApp.Api.csproj
+++ b/DigitalTherapyBackendApp.Api/DigitalTherapyBackendApp.Api.csproj
@@ -29,4 +29,8 @@
     <ProjectReference Include="..\DigitalTherapyBackendApp.Infrastructure\DigitalTherapyBackendApp.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\DailyTips\Payloads\" />
+  </ItemGroup>
+
 </Project>
