--- a/DigitalTherapyBackendApp.Domain/DigitalTherapyBackendApp.Domain.csproj
+++ b/DigitalTherapyBackendApp.Domain/DigitalTherapyBackendApp.Domain.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="14.0.0" />
     <PackageReference Include="Azure.AI.OpenAI" Version="1.0.0-beta.9" />
     <PackageReference Include="MailKit" Version="4.11.0" />
     <PackageReference Include="MediatR" Version="11.0.0" />
